[package]
name = "rayon-join-macro"
description = "A convenience n-nary macro around `rayon::join()`"
version = "0.1.1"
authors = ["Jakub Wieczorek <jakub.adam.wieczorek@gmail.com>"]
edition = "2018"

license = "MIT"

keywords = ["macro", "parallel", "rayon"]
repository = "https://github.com/jakubadamw/rayon-join-macro"

[dependencies]
rayon = "1.2"
